--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@types/node": "20.1.0",
     "@types/uuid": "^9.0.1",
     "aws-cdk": "2.79.1",
-    "aws-sdk": "^2.1381.0",
+    "aws-sdk": "^2.1538.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.0.4"
   },
   "dependencies": {
     "aws-cdk-lib": "2.79.1",
+    "aws-lib": "^0.3.0",
     "aws-xray-sdk": "^3.5.3",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "npm": "^10.3.0",
+    "source-map-support": "^0.5.21",
+    "ts-runtime": "^0.3.0"
   }
 }
